k8s/application/service-fiap-sa.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fiap-sa
  namespace: fiap-sa-api
  labels:
    app: fiap-sa
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: fiap-sa
