k8s/application/gateway-fiap-sa.yaml
apiVersion: networking.istio.io/v1alpha1
kind: Gateway
metadata:
  name: gateway
  namespace: fiap-sa-api
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: TCP
    hosts:
    - "*"
